--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				A FANTASTIC ENGAGING HEADLINE GOES HERE
 			</div>
 			<span>
-				<img src="images/round-pic.png"></img>
+				<img class="minipic" src="images/round-pic.png"></img>
 				<p class="author">Anne Marie</p>
 				<p class="date">Monday Oct. 7th 9:22pm</p>
 			</span>
@@ -71,7 +71,7 @@
 				<p>About This Ad</p>
 			</div>
 			<div class="sectionh">
-				<p>Section Heading</p>
+				<p>SIDEBAR SECTION HEADING</p>
 				<span>Chicken unknown besides attacks gay compact out you. Continuing no simplicity no favourable on reasonably melancholy estimating. Own hence views two ask right whole ten seems. What near kept met call old west dine. Our announcing sufficient why pianoforte.</span>
 			</div>
 		</div>
@@ -99,7 +99,7 @@
 <!-- blue bottom info row -->
 		<div class="foot">
 			<img src="images/iron-yard.gif">
-			<span>
+			<span align= "center">
 				The Ironyard Copyright 2013, All Rights Reserved
 			</span>
 			<p>
