cause mason sait to do another commit

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<span >SURF & PADDLE CO. BLOG</span>
 			</div>
 			<div class="rhead">
-					<a href="about.com">ABOUT</a> <a href="www.google.com" class="about" >SEARCH</a>
+					ABOUT SEARCH
 					<img src="images/search.png">
 			</div>
 			<div class="mhead">
@@ -38,7 +38,7 @@
 			<span>
 				<img class="minipic" src="images/round-pic.png"></img>
 				<p class="author">Anne Marie</p>
-				<p class="date">on Monday Oct. 7th 9:22pm</p>
+				<p class="date">Monday Oct. 7th 9:22pm</p>
 			</span>
 			
 			<p class="txt1">
